pass obj in ejs

--- a/views/news.ejs
+++ b/views/news.ejs
@@ -10,5 +10,8 @@
 <body>
     <p>HTML code here (in news.ejs)</p>
     <p>Id of page <strong><%= newsId %></strong></p>
+    <p>Accept obj in ejs</p>
+    <p>Title of page <strong><%= obj.title %></strong></p>
+    <p>ID of page <strong><%= obj.id %></strong></p>
 </body>
 </html>
