use include for include templates

--- a/views/news.ejs
+++ b/views/news.ejs
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <%- include('blocks/header.ejs') %>
     <p>HTML code here (in news.ejs)</p>
     <p>Id of page <strong><%= newsId %></strong></p>
     <p>Accept obj in ejs</p>
